--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "nodeunit": ">=0.5.0",
-        "xml2js"  : ">=0.1.0",
+        "xml2js"  : "0.2.x",
         "yaml"    : ">=0.2.0",
         "iconv": ">=1.0.0"
     }
